--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env DEBUG=1stg:* babel-node server",
+    "dev": "cross-env DEBUG=1stg:* NODE_ENV=development babel-node server",
     "build:react:client": "webpack --config=build/react.client.babel.js --colors --progress",
     "build:react:server": "webpack --config=build/react.server.babel.js --colors --progress",
     "build:server": "webpack --config build/server.babel.js --colors --progress",
@@ -64,63 +64,64 @@
     ]
   },
   "dependencies": {
-    "anujs": "^1.2.9",
+    "anujs": "^1.3.2",
     "classnames": "^2.2.5",
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.1.4",
     "debug": "^3.1.0",
     "koa": "^2.5.0",
     "koa-compose": "^4.0.0",
     "koa-compress": "^2.0.0",
-    "koa-logger": "^3.1.0",
+    "koa-logger": "^3.2.0",
     "koa-static-cache": "^5.1.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-server-renderer": "^0.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/node": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@babel/preset-stage-0": "^7.0.0-beta.40",
-    "@babel/register": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/node": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "@babel/preset-stage-0": "^7.0.0-beta.44",
+    "@babel/register": "^7.0.0-beta.44",
     "apply-loader": "^2.0.0",
-    "autoprefixer": "^8.0.0",
+    "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.10",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-minifier": "^3.5.9",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-minifier": "^3.5.14",
     "husky": "^0.14.3",
     "img-loader": "^2.0.1",
-    "koa-webpack": "^3.0.0",
-    "lint-staged": "^7.0.0",
-    "node-sass": "^4.7.2",
+    "koa-webpack": "^3.0.2",
+    "lint-staged": "^7.0.4",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.2",
-    "postcss-loader": "^2.1.1",
+    "postcss-loader": "^2.1.3",
     "postcss-pxtorem": "^4.0.1",
-    "prettier": "^1.11.0",
+    "prettier": "^1.12.0",
     "prop-types": "^15.6.1",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "react-hot-loader": "^4.0.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "react-hot-loader": "^4.0.1",
     "react-style-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "ssr-webpack-plugin": "^2.0.1",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^1.0.0",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
     "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.7.2"
   }
 }
