--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "precommit": "lint-staged"
   },
   "babel": {
-    "presets": ["@babel/env", "@babel/stage-0"]
+    "presets": [
+      "@babel/env",
+      [
+        "@babel/stage-0",
+        {
+          "decoratorsLegacy": true
+        }
+      ]
+    ]
   },
   "eslintConfig": {
     "root": true,
@@ -32,20 +40,36 @@
       "__DEV__": false,
       "__SERVER__": false
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"]
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:prettier/recommended"
+    ]
   },
-  "eslintIgnore": ["dist"],
+  "eslintIgnore": [
+    "dist"
+  ],
   "lint-staged": {
-    "*.{json,md}": ["prettier --write", "git add"],
-    "*.js": ["eslint --max-warnings=10 --fix", "git add"]
+    "*.{json,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --max-warnings=10 --fix",
+      "git add"
+    ]
   },
   "postcss": {
     "plugins": {
       "autoprefixer": null,
       "postcss-pxtorem": {
         "rootValue": 14,
-        "propList": ["*"],
-        "selectorBlackList": ["html"],
+        "propList": [
+          "*"
+        ],
+        "selectorBlackList": [
+          "html"
+        ],
         "minPixelValue": 2
       }
     }
@@ -64,63 +88,63 @@
     ]
   },
   "dependencies": {
-    "anujs": "^1.3.2",
+    "anujs": "^1.4.0",
     "classnames": "^2.2.5",
-    "cross-env": "^5.1.4",
+    "cross-env": "^5.1.6",
     "debug": "^3.1.0",
-    "koa": "^2.5.0",
-    "koa-compose": "^4.0.0",
+    "koa": "^2.5.1",
+    "koa-compose": "^4.1.0",
     "koa-compress": "^3.0.0",
     "koa-logger": "^3.2.0",
     "koa-static-cache": "^5.1.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-server-renderer": "^0.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/node": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/preset-react": "^7.0.0-beta.44",
-    "@babel/preset-stage-0": "^7.0.0-beta.44",
-    "@babel/register": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/node": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-react": "^7.0.0-beta.49",
+    "@babel/preset-stage-0": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
     "apply-loader": "^2.0.0",
-    "autoprefixer": "^8.2.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^8.0.0-beta.2",
+    "autoprefixer": "^8.6.0",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^8.0.0-beta.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-minifier": "^3.5.14",
+    "html-minifier": "^3.5.16",
     "husky": "^0.14.3",
-    "img-loader": "^2.0.1",
-    "koa-webpack": "^3.0.2",
-    "lint-staged": "^7.0.4",
+    "img-loader": "^3.0.0",
+    "koa-webpack": "^5.0.2",
+    "lint-staged": "^7.1.3",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
-    "npm-run-all": "^4.1.2",
-    "postcss-loader": "^2.1.3",
+    "npm-run-all": "^4.1.3",
+    "postcss-loader": "^2.1.5",
     "postcss-pxtorem": "^4.0.1",
-    "prettier": "^1.12.0",
+    "prettier": "^1.13.4",
     "prop-types": "^15.6.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "react-hot-loader": "^4.0.1",
+    "react-hot-loader": "^4.2.0",
     "react-style-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.0",
+    "sass-loader": "^7.0.2",
     "ssr-webpack-plugin": "^2.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2"
   }
