--- a/src/.babelrc
+++ b/src/.babelrc
@@ -6,14 +6,24 @@
         "modules": false
       }
     ],
-    "@babel/stage-0",
+    [
+      "@babel/stage-0",
+      {
+        "decoratorsLegacy": true
+      }
+    ],
     "@babel/react"
   ],
   "plugins": ["react-hot-loader/babel"],
   "env": {
     "production": {
       "plugins": [
-        ["transform-react-remove-prop-types", { "removeImport": true }]
+        [
+          "transform-react-remove-prop-types",
+          {
+            "removeImport": true
+          }
+        ]
       ]
     }
   }
