--- a/package.json
+++ b/package.json
@@ -19,18 +19,10 @@
   },
   "babel": {
     "presets": [
-      "@babel/env",
-      [
-        "@babel/stage-0",
-        {
-          "decoratorsLegacy": true
-        }
-      ]
+      "@babel/env"
     ]
   },
   "eslintConfig": {
-    "root": true,
-    "parser": "babel-eslint",
     "env": {
       "browser": true,
       "node": true,
@@ -40,10 +32,18 @@
       "__DEV__": false,
       "__SERVER__": false
     },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "legacyDecorators": true
+      }
+    },
+    "settings": {
+      "react": {
+        "version": "16"
+      }
+    },
     "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:prettier/recommended"
+      "1stg/react"
     ]
   },
   "eslintIgnore": [
@@ -59,93 +59,70 @@
       "git add"
     ]
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": null,
-      "postcss-pxtorem": {
-        "rootValue": 14,
-        "propList": [
-          "*"
-        ],
-        "selectorBlackList": [
-          "html"
-        ],
-        "minPixelValue": 2
-      }
-    }
-  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "all",
-    "overrides": [
-      {
-        "files": "*.json",
-        "options": {
-          "printWidth": 150
-        }
-      }
-    ]
+    "trailingComma": "all"
   },
   "dependencies": {
-    "anujs": "^1.4.1",
-    "classnames": "^2.2.5",
-    "cross-env": "^5.1.6",
+    "anujs": "^1.4.6",
+    "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
     "debug": "^3.1.0",
-    "koa": "^2.5.1",
+    "koa": "^2.5.2",
     "koa-compose": "^4.1.0",
     "koa-compress": "^3.0.0",
     "koa-logger": "^3.2.0",
     "koa-static-cache": "^5.1.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-server-renderer": "^0.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/node": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-react": "^7.0.0-beta.49",
-    "@babel/preset-stage-0": "^7.0.0-beta.49",
-    "@babel/register": "^7.0.0-beta.49",
-    "apply-loader": "^2.0.0",
-    "autoprefixer": "^9.0.1",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.1.5",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0-beta.3",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.9.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.1.0",
+    "eslint": "^5.5.0",
+    "eslint-config-1stg": "^3.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-minifier": "^3.5.16",
+    "html-minifier": "^3.5.20",
     "husky": "^0.14.3",
     "img-loader": "^3.0.0",
-    "koa-webpack": "^5.0.2",
-    "lint-staged": "^7.1.3",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "koa-webpack": "^5.1.0",
+    "lint-staged": "^7.2.2",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.3",
-    "postcss-loader": "^2.1.5",
-    "postcss-pxtorem": "^4.0.1",
-    "prettier": "^1.13.4",
-    "prop-types": "^15.6.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "prettier": "^1.14.2",
+    "prop-types": "^15.6.2",
     "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
-    "react-hot-loader": "^4.3.0",
+    "pug-plain-loader": "^1.0.0",
+    "react-hot-loader": "^4.3.6",
     "react-style-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "ssr-webpack-plugin": "^2.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.11.0",
-    "webpack-cli": "^3.0.2",
-    "webpack-merge": "^4.1.2",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   }
 }
