--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,30 +1,27 @@
 {
-  "presets": [
+  presets: [
     [
-      "@babel/env",
+      '@babel/env',
       {
-        "modules": false
-      }
+        modules: false,
+      },
     ],
-    [
-      "@babel/stage-0",
-      {
-        "decoratorsLegacy": true
-      }
-    ],
-    "@babel/react"
+    '@babel/react',
   ],
-  "plugins": ["react-hot-loader/babel"],
-  "env": {
-    "production": {
-      "plugins": [
+  plugins: [
+    '@babel/proposal-class-properties',
+    'react-hot-loader/babel',
+  ],
+  env: {
+    production: {
+      plugins: [
         [
-          "transform-react-remove-prop-types",
+          'transform-react-remove-prop-types',
           {
-            "removeImport": true
-          }
-        ]
-      ]
-    }
-  }
+            removeImport: true,
+          },
+        ],
+      ],
+    },
+  },
 }
