--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "build": "rimraf dist && cross-env DEBUG=1stg:* NODE_ENV=production run-p build:react:client build:react:server build:server build:template",
     "start": "cross-env DEBUG=1stg:* NODE_ENV=production node dist/server",
     "sync:static": "bash build/sync-static.sh",
-    "lint": "eslint . --max-warnings=10",
-    "precommit": "lint-staged"
+    "lint": "eslint . --max-warnings=10"
   },
   "babel": {
     "presets": [
       "@babel/env"
     ]
   },
+  "browserslist": "> 1% in CN",
   "eslintConfig": {
     "env": {
       "browser": true,
@@ -49,6 +49,11 @@
   "eslintIgnore": [
     "dist"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{json,md}": [
       "prettier --write",
@@ -65,62 +70,63 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "anujs": "^1.4.6",
+    "anujs": "^1.4.7",
     "cross-env": "^5.2.0",
-    "debug": "^3.1.0",
-    "koa": "^2.5.2",
+    "debug": "^4.0.1",
+    "koa": "^2.5.3",
     "koa-compose": "^4.1.0",
     "koa-compress": "^3.0.0",
     "koa-logger": "^3.2.0",
     "koa-static-cache": "^5.1.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-server-renderer": "^0.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.1.0",
     "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^9.1.5",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-config-1stg": "^3.1.0",
-    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-minifier": "^3.5.20",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.15",
     "imagemin": "^6.0.0",
     "img-loader": "^3.0.0",
     "koa-webpack": "^5.1.0",
-    "lint-staged": "^7.2.2",
-    "mini-css-extract-plugin": "^0.4.2",
+    "lint-staged": "^7.3.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.14.2",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
-    "react-hot-loader": "^4.3.6",
+    "react-hot-loader": "^4.3.11",
     "react-style-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "ssr-webpack-plugin": "^2.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.1",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   }
