--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf dist && cross-env DEBUG=1stg:* NODE_ENV=production run-p build:react:client build:react:server build:server build:template",
     "start": "cross-env DEBUG=1stg:* NODE_ENV=production node dist/server",
     "sync:static": "bash build/sync-static.sh",
-    "lint": "eslint . --max-warnings=10"
+    "lint": "eslint . --ignore-path .gitignore --max-warnings=10"
   },
   "babel": {
     "presets": [
@@ -23,6 +23,9 @@
   },
   "browserslist": "> 1% in CN",
   "eslintConfig": {
+    "extends": [
+      "1stg/react"
+    ],
     "env": {
       "browser": true,
       "node": true,
@@ -41,14 +44,8 @@
       "react": {
         "version": "16"
       }
-    },
-    "extends": [
-      "1stg/react"
-    ]
+    }
   },
-  "eslintIgnore": [
-    "dist"
-  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -80,7 +77,7 @@
     "koa-static-cache": "^5.1.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-server-renderer": "^0.2.3"
+    "react-server-renderer": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -90,20 +87,20 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^9.1.5",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.1",
+    "cssnano": "^4.1.4",
     "eslint": "^5.6.0",
     "eslint-config-1stg": "^3.1.0",
     "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-minifier": "^3.5.20",
-    "husky": "^1.0.0-rc.15",
+    "husky": "^1.0.1",
     "imagemin": "^6.0.0",
     "img-loader": "^3.0.0",
     "koa-webpack": "^5.1.0",
@@ -125,7 +122,7 @@
     "ssr-webpack-plugin": "^2.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.1",
-    "webpack": "^4.20.0",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
