--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build:server": "webpack --config build/server.babel.js --colors --progress",
     "build:template": "node build/template.js",
     "dev": "cross-env DEBUG=1stg:* babel-node server",
-    "lint": "cross-env EFF_NO_LINK_RULES=true eslint . --cache --max-warnings=10 -f friendly",
+    "lint": "run-p lint:*",
+    "lint:es": "cross-env EFF_NO_LINK_RULES=true eslint . --cache --max-warnings=10 -f friendly",
+    "lint:style": "stylelint 'src/**/*.scss' --cache",
     "now-build": "sh build/now.sh",
     "postinstall": "yarn-deduplicate || exit 0",
     "start": "cross-env DEBUG=1stg:* node dist/server"
@@ -24,7 +26,7 @@
   "dependencies": {
     "anujs": "^1.6.0",
     "core-js": "^3.6.4",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.0",
     "debug": "^4.1.1",
     "koa": "^2.11.0",
     "koa-compose": "^4.1.0",
@@ -32,23 +34,23 @@
     "koa-logger": "^3.2.1",
     "koa-static-cache": "^5.1.2",
     "memory-fs": "^0.5.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-server-renderer": "^1.2.0"
   },
   "devDependencies": {
-    "@1stg/app-config": "^0.1.21",
-    "@babel/node": "^7.8.3",
+    "@1stg/app-config": "^0.4.3",
+    "@babel/node": "^7.8.4",
     "@babel/register": "^7.8.3",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@hot-loader/react-dom": "^16.12.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "eslint-import-resolver-webpack": "^0.12.1",
-    "file-loader": "^5.0.2",
+    "file-loader": "^5.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-minifier": "^4.0.0",
     "img-loader": "^3.0.1",
-    "koa-webpack": "^5.2.5",
+    "koa-webpack": "^5.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
@@ -59,18 +61,19 @@
     "pug-plain-loader": "^1.0.0",
     "react-hot-loader": "^4.12.19",
     "react-style-loader": "^2.3.0",
-    "rimraf": "^3.0.0",
-    "sass": "^1.25.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.26.1",
     "sass-loader": "^8.0.2",
-    "sw-precache-webpack-plugin": "^0.11.5",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "yarn-deduplicate": "^1.1.1"
   },
   "resolutions": {
-    "@babel/core": "^7.8.3"
+    "@babel/core": "^7.8.4",
+    "imagemin-gifsicle": "^6.0.1"
   }
 }
