--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,23 +1,26 @@
 name: Node CI
 
-on: [push, pull_request]
+on:
+  - push
+  - pull_request
 
 jobs:
   default:
     strategy:
       matrix:
-        node: [12]
-        os: [macOS-latest, ubuntu-latest]
+        node:
+          - 18
+        os:
+          - macOS-latest
+          - ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-      - name: Setup yarn
-        run: |
-          curl -o- -L https://yarnpkg.com/install.sh | bash
-          export PATH="$HOME/.yarn/bin:$PATH"
+
       - name: Install Dependencies
         run: yarn --frozen-lockfile
 
