--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "12.x"
+    "node": "18.x"
   },
   "scripts": {
-    "build": "rimraf dist && cross-env DEBUG=1stg:* NODE_ENV=production run-p build:**",
+    "build": "rimraf dist && cross-env DEBUG=1stg:* NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider run-p build:**",
     "build:react:client": "webpack --config=build/react.client.babel.js --colors --progress",
     "build:react:server": "webpack --config=build/react.server.babel.js --colors --progress",
     "build:server": "webpack --config build/server.babel.js --colors --progress",
@@ -43,7 +43,7 @@
     "@babel/node": "^7.8.4",
     "@babel/register": "^7.8.3",
     "@hot-loader/react-dom": "^16.12.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
     "css-loader": "^3.4.2",
     "eslint-import-resolver-webpack": "^0.12.1",
     "file-loader": "^5.1.0",
@@ -67,7 +67,7 @@
     "sw-precache-webpack-plugin": "^1.0.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "yarn-deduplicate": "^1.1.1"
