--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
     "lint": "run-p lint:*",
     "lint:es": "cross-env EFF_NO_LINK_RULES=true eslint . --cache --max-warnings=10 -f friendly",
     "lint:style": "stylelint 'src/**/*.scss' --cache",
-    "now-build": "sh build/now.sh",
-    "postinstall": "yarn-deduplicate || exit 0",
-    "start": "cross-env DEBUG=1stg:* node dist/server"
+    "prepare": "yarn-deduplicate || exit 0",
+    "start": "cross-env DEBUG=1stg:* node dist/server",
+    "vercel-build": "sh build/vercel.sh"
   },
   "dependencies": {
     "anujs": "^1.6.0",
-    "core-js": "^3.6.4",
-    "cross-env": "^7.0.0",
-    "debug": "^4.1.1",
-    "koa": "^2.11.0",
+    "core-js": "^3.33.2",
+    "cross-env": "^7.0.3",
+    "debug": "^4.3.4",
+    "koa": "^2.14.2",
     "koa-compose": "^4.1.0",
-    "koa-compress": "^3.0.0",
+    "koa-compress": "^3.1.0",
     "koa-logger": "^3.2.1",
     "koa-static-cache": "^5.1.2",
     "memory-fs": "^0.5.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-server-renderer": "^1.2.0"
   },
   "devDependencies": {
     "@1stg/app-config": "^0.4.3",
     "@babel/node": "^7.8.4",
     "@babel/register": "^7.8.3",
-    "@hot-loader/react-dom": "^16.12.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^3.4.2",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "file-loader": "^5.1.0",
+    "@hot-loader/react-dom": "^16.14.0",
+    "babel-loader": "^8.3.0",
+    "css-loader": "^3.6.0",
+    "eslint-import-resolver-webpack": "^0.13.8",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-minifier": "^4.0.0",
     "img-loader": "^3.0.1",
@@ -57,16 +57,16 @@
     "postcss-loader": "^3.0.0",
     "postcss-plugin-px2rem": "^0.8.1",
     "prop-types": "^15.7.2",
-    "pug": "^2.0.4",
+    "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
-    "react-hot-loader": "^4.12.19",
+    "react-hot-loader": "^4.13.1",
     "react-style-loader": "^2.3.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.1",
+    "sass": "^1.69.5",
     "sass-loader": "^8.0.2",
     "sw-precache-webpack-plugin": "^1.0.0",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
